# 3d-printer-music

./: .gitignore  README.md  debug_swan_lake.py  debug_swan_lake2.py  debug_swan_lake3.py  play_midi.py  play_midi_playlist.py  playlist.yaml  preview_midi.py  pyproject.toml  test_options.py
src/: __init__.py  config.py  connection.py  exceptions.py  gcode_sender.py  midi_parser.py  motion_planner.py  note_player.py  playlist_manager.py  position_tracker.py  transposer.py
